tests/sksl/errors/UseWithoutInitializeDeadSwitch.glsl
### Compilation failed:

error: 7: 'x' has not been assigned
1 error
